--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
   },
   "dependencies": {
     "ascii-table": "^0.0.9",
+    "axel": "^0.0.3",
     "chalk": "^4.0.0",
     "discord-anti-spam": "^2.5.1",
     "discord-logs": "^1.7.7",
+    "discord-spam-protector": "^1.1.4",
     "discord.js": "^12.2.0",
     "express": "^4.17.1",
     "fs": "^0.0.2",
     "http": "^0.0.0",
+    "humanize-duration": "^3.25.1",
     "jimp": "^0.12.1",
+    "license": "^1.0.3",
     "moment": "^2.26.0",
     "moment-duration-format": "^2.2.2",
+    "ms": "^2.1.3",
     "parse-ms": "^2.1.0",
+    "path": "^0.12.7",
+    "pretty-ms": "^7.0.1",
     "quick.db": "^7.1.1",
     "request": "^2.88.2",
     "simple-youtube-api": "^5.2.1",
     "snekfetch": "^4.0.4",
-    "ytdl-core": "^2.1.5",
-    "ms": "^2.1.3",
-    "axel": "^0.0.3",
-    "pretty-ms": "^7.0.1",
-    "path": "^0.12.7",
-    "discord-spam-protector": "^1.1.4",
-    "humanize-duration": "^3.25.1",
-    "license": "^1.0.3"
+    "ytdl-core": "^2.1.5"
   },
   "engines": {
     "node": "12.x"
